# R-type-Clone

./: CMakeLists.txt  test_network.sh
assets/scripts/platformer/: Main.lua
assets/scripts/platformer/systems/: CameraSystem.lua  CollisionSystem.lua  GameLogicSystem.lua  NetworkSystem.lua  PhysicSystem.lua  PlayerSystem.lua  RenderSystem.lua
assets/scripts/space-shooter/: GameLoop.lua  config.lua  spawns.lua
assets/scripts/space-shooter/components/: Components.lua
assets/scripts/space-shooter/levels/: Level-1.lua  Level-2.lua
assets/scripts/space-shooter/systems/: BackgroundSystem.lua  BossSystem.lua  CollisionSystem.lua  EnemySystem.lua  HPBarSystem.lua  LifeSystem.lua  MenuSystem.lua  NetworkSystem.lua  PlayerSystem.lua  PowerUpSystem.lua  RenderSystem.lua  ScoreSystem.lua  WeaponSystem.lua  WinSystem.lua
cmake/: Dependencies.cmake
docs/: NETWORK_PROTOCOL.md
scripts/: network_test.sh  record_session.sh
src/engine/app/: AApplication.cpp
src/engine/modules/ECSManager/LuaECSManager/: CMakeLists.txt  LuaBindings.cpp
src/engine/modules/NetworkManager/: CMakeLists.txt  GameStateMachine.cpp  GameStateMachine.hpp  LobbyManager.cpp  LobbyManager.hpp  NetworkManager.cpp  NetworkManager.hpp
src/engine/modules/NetworkManager/tests/: CMakeLists.txt
src/engine/modules/Renderer/GLEWSFML/: ParticleSystem.cpp
src/engine/modules/SoundManager/SFML/: SFMLSoundManager.cpp
src/engine/modules/WindowManager/SFML/: SFMLWindowManager.cpp  SFMLWindowManager.hpp
src/game/client/: RTypeClient.cpp  RTypeClient.hpp  main.cpp
src/game/server/: RTypeServer.cpp  RTypeServer.hpp  main.cpp
src/platformer/: PlatformerGame.cpp  PlatformerGame.hpp  main.cpp
